--- a/demo/src/main/resources/templates/principal.html
+++ b/demo/src/main/resources/templates/principal.html
@@ -36,11 +36,7 @@
             <button class="nav-button">Informes</button>
         </aside>
         <main>
-            <div class="top-actions">
-                <button>Añadir Producto</button>
-                <button>Añadir Proveedor Nuevo</button>
-                <button>Crear Pedido</button>
-            </div>
+
             <div class="dashboard">
                 <div class="card">
                     <h3>Transacciones Recientes</h3>
@@ -76,7 +72,7 @@
 
 
                 <div class="card">
-                    <h3>Stock Bajo <span style="color:red; font-size: 0.9rem;">↓ 9.3%</span></h3>
+                    <h3>Stock Bajo <span style="color:red; font-size: 0.9rem;">↓</span></h3>
                     <div class="table-container" style="max-height: 160px;">
                         <table>
                             <thead>
