--- a/demo/src/main/resources/templates/proveedores.html
+++ b/demo/src/main/resources/templates/proveedores.html
@@ -109,7 +109,7 @@
     </div>
     <div id="productModalAgregar" class="modal">
         <div class="modal-content">
-            <span class="closeAgregar">&times;</span>
+            <span class="close">&times;</span>
             <h2>Añadir Proveedor</h2>
             <form method="post" action="/insertProveedor">
                 <label>Nombre de la Empresa:<br>
@@ -138,7 +138,7 @@
     </div>
     <div id="productModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="closeEdit">&times;</span>
             <h2>Editar Proveedor</h2>
             <!-- Modal Editar Proveedor -->
             <form method="post" action="/editProveedor">
@@ -190,11 +190,11 @@
         // Referencias a elementos
         const modal = document.getElementById("productModal");
         const openBtn = document.getElementById("openModalBtn");
-        const closeBtn = document.querySelector(".close");
+        const closeBtn = document.querySelector(".closeEdit");
 
         const modalAgregar = document.getElementById("productModalAgregar");
         const openBtnAgregar = document.getElementById("openModalBtnAgregar");
-        const closeBtnAgregar = document.querySelector(".closeAgregar");
+        const closeBtnAgregar = document.querySelector(".close");
 
         // Mostrar modal agregar
         if (openBtnAgregar) {
