--- a/demo/src/main/resources/templates/principal.html
+++ b/demo/src/main/resources/templates/principal.html
@@ -32,6 +32,7 @@
             <button onclick="location.href='/Productos'" class="nav-button">Productos</button>
             <button onclick="location.href='/Proveedores'" class="nav-button">Proveedores</button>
             <button onclick="location.href='/Pedidos'" class="nav-button">Pedidos</button>
+            <button onclick="location.href='/Compras'" class="nav-button">Compras</button>
             <button onclick="location.href='/Transacciones'" class="nav-button">Transacciones</button>
             <button class="nav-button">Informes</button>
         </aside>
